--- a/quick_blog-client/package.json
+++ b/quick_blog-client/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
     "lenis": "^1.3.11",
     "localforage": "^1.10.0",
     "lucide-react": "^0.542.0",
+    "marked": "^16.3.0",
     "match-sorter": "^8.1.0",
     "moment": "^2.30.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.8.2",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.1.12"
