--- a/quick_blog-client/package.json
+++ b/quick_blog-client/package.json
@@ -22,6 +22,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.8.2",
     "sort-by": "^1.2.0",
